# ankisync

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb
ankisync/: anki.py  anki_db.py  anki_util.py  ankiconnect.py  apkg.py  db.py  dir.py  util.py
ankisync/builder/: __init__.py  decks.py  default.py  guid.py  models.py  notes.py
ankisync/presets/: __init__.py  wanki_min.json
dev/: get_anki_path.py  get_sample_from_anki2.py  get_sample_from_apkg.py  model.json  official_anki.py  reset_collection.py  sample.json  sample.yaml
