[tool.poetry]
name = "ankisync"
version = "0.2.3"
description = "Doing in Anki what AnkiConnect cannot do"
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/patarapolw/ankisync"
homepage = "https://github.com/patarapolw/ankisync"
keywords = ["anki-flashcards"]

[tool.poetry.dependencies]
python = ">=3.5.*"
appdirs = "^1.4"
psutil = "^5.4"
peewee = "^3.7"
importlib_resources = "^1.0"
tinydb = "^3.11"

[tool.poetry.dev-dependencies]
requests = "^2.20"
oyaml = "^0.7.0"
pylint = "^2.5.2"
pytest = "^5.4.1"
jupyter = "^1.0.0"
